--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Télécharger</title>
 </head>
 <body>
-  <a href="app-x86_64-release.apk" download="app-x86_64-release.apk">Télécharger</a>
+  <a href="app-armeabi-v7a-release.apk" download="app-x86_64-release.apk">Télécharger</a>
 </body>
 </html>
