--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div style="background-color: blue;">
-      <a href="../app-arm64-v8a-release.apk" download="Inventaire du Quai.apk">Télécharger</a>
+      <a href="../app-arm64-v8a-release.apk" download="Inventaire du Quai.apk">Tétélala</a>
     </div>
   </body>
 </html>
