--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,6 @@
     <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore-compat.js"></script>
     <script src="./script.js"></script>
-    <a href="../app-arm64-v8a-release.apk" download="Inventaire du Quai.apk">Télécharger</a>
+    <a href="app-arm64-v8a-release.apk" download="Inventaire du Quai.apk">Télécharger</a>
   </body>
 </html>
