--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,6 @@
     <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore-compat.js"></script>
     <script src="./script.js"></script>
-    <a href="/app-release.zip" download="Inventaire du Quaiii.zip">Télécharger</a>
+    <a href="https://github.com/VPLZ/Inventory-Web-Page/releases/download/flutter/app-release.apk" download="Inventaire du Quaiii.zip">Télécharger</a>
   </body>
 </html>
